--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,3 +23,19 @@ body {
     text-wrap: balance;
   }
 }
+
+@keyframes scan {
+  0% {
+    transform: translateY(-100%);
+  }
+  50% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-100%);
+  }
+}
+
+.animate-scan {
+  animation: scan 2s linear infinite;
+}
